[package]
name = "slater"
version = "0.2.4"
license = "MIT/Apache-2.0"
authors = ["Bob <nottxy@gmail.com>"]
keywords = ["slatejs", "slate"]
description = "slatejs schema for rust"
homepage = "https://github.com/nottxy/slater"
repository = "https://github.com/nottxy/slater"
documentation = "https://docs.rs/slater"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"